# laudec

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  install.sh  test_dashboard.sh  test_integration.sh
.claude/: settings.local.json.laudec-backup
cloud-dashboard/: README.md  next.config.ts  package-lock.json  package.json  setKeys.mjs  test-ingest.mjs
cloud-dashboard/convex/: apiKeys.ts  auth.ts  http.ts  ingest.ts  schema.ts  sessions.ts  teams.ts  testHelpers.ts  tsconfig.json
cloud-dashboard/convex/_generated/: api.d.ts
cloud-dashboard/src/app/: globals.css  layout.tsx  page.tsx
cloud-dashboard/src/app/session/[id]/: page.tsx
cloud-dashboard/src/app/settings/: page.tsx
cloud-dashboard/src/components/: Dashboard.tsx  SessionDetailView.tsx  SessionsList.tsx  SettingsView.tsx  SignIn.tsx  TeamSetup.tsx
cloud-dashboard/src/components/tabs/: EventsTab.tsx  MetricsTab.tsx  ProxyTab.tsx
cloud-dashboard/src/lib/: format.ts
dashboard/: index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.svelte  style.css
dashboard/src/lib/: api.js
dashboard/src/pages/: Config.svelte  SessionDetail.svelte  Sessions.svelte
src/: cloud.rs  collector.rs  config.rs  dashboard.rs  db.rs  launcher.rs  main.rs  proxy.rs  session.rs  settings.rs
