[package]
name = "laudec"
version = "0.1.0"
edition = "2021"
description = "See everything Claude Code does. One binary. One command."

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server (proxy + dashboard)
axum = "0.8"

# gRPC (OTEL collector)
tonic = "0.14"
prost = "0.14"

# OTEL proto definitions (depends on tonic ^0.14.1, prost ^0.14)
opentelemetry-proto = { version = "0.31", features = ["gen-tonic", "metrics", "logs"] }

# HTTP client (forward to Anthropic)
reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream", "json"] }

# Database
rusqlite = { version = "0.39", features = ["bundled"] }

# Config / serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
futures = "0.3"
tokio-stream = "0.1"
dirs = "6"
tempfile = "3"
rust-embed = "8"
